Kubernetes_file/ms_deploy_kubernetes/customer_rc_svc.yaml
#customer
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer
  ports:
    - port: 8090
  type: NodePort
