Kubernetes_file/ms_deploy_kubernetes/order_rc_svc.yaml
#order
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - port: 8092
  type: NodePort
