Kubernetes_file/ms_deploy_kubernetes/product_rc_svc.yaml
#product
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - port: 8091
  type: NodePort
