Kubernetes_file/ms_deploy_kubernetes/ingress_conf_prod.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: ecom.info
      http:
        paths:
        - path: /product_service
          backend:
            serviceName: product-service
            servicePort: 8091
